--- a/library.css
+++ b/library.css
@@ -49,7 +49,7 @@ table {
     width: 75px;
 }
 
-#remove-button {
+.remove-button {
     width: 50px;
     display: block;
     margin: auto;
@@ -57,4 +57,10 @@ table {
     color: red;
     background-color: whitesmoke;
     border: 1px solid black;
+}
+
+.read-button {
+    width: 50px;
+    display: block;
+    margin: auto;
 }
